--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,7 @@ window_width = 1450
 window_height = 550
 
 [Pseudostromquelle]
+pseudostromquelle_active = 0
 step_size = 0.05
 max_iterations = 50
 tolerance = 0.001
