datentyp für Export in config eingefügt

--- a/config.ini
+++ b/config.ini
@@ -18,6 +18,9 @@ max_voltage = 30.0
 delay_messung = 0.5
 
 [Export]
+# %s, %.2f, %d
+datentyp = %.2f
 trennzeichen = ';'
+#txt, csv
 format = csv
 
