--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [Devices]
-address_power_source = 'ASRL6::INSTR'
-address_frequency_generator = 'ASRL3::INSTR'
-address_multimeter = 'ASRL5::INSTR'
+address_power_source = ASRL6::INSTR
+address_frequency_generator = ASRL3::INSTR
+address_multimeter = ASRL5::INSTR
 
 [GUI]
 window_width = 1450
